--- a/packages/theme/styles/popups.scss
+++ b/packages/theme/styles/popups.scss
@@ -1,20 +1,20 @@
 //
 // Copyright © 2021 Hanzo <dev@hanzo.ai>.
-// 
+//
 // Licensed under the Eclipse Public License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License. You may
 // obtain a copy of the License at https://www.eclipse.org/legal/epl-2.0
-// 
+//
 // Unless required by applicable law or agreed to in writing, software
 // distributed under the License is distributed on an "AS IS" BASIS,
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-// 
+//
 // See the License for the specific language governing permissions and
 // limitations under the License.
 //
 
 /* Popups */
-.hulyPopup-container {
+.hanzoaiPopup-container {
   display: flex;
   flex-direction: column;
   max-height: 22.625rem;
@@ -33,7 +33,7 @@
     min-width: 16.5rem;
     max-width: 16.5rem;
   }
-  .hulyPopup-row {
+  .hanzoaiPopup-row {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -98,7 +98,7 @@
         background-color: var(--theme-tooltip-key-bg);
         border: 1px solid var(--theme-button-border);
         border-radius: var(--extra-small-BorderRadius);
-      }  
+      }
     }
 
     &:not(.disabled, :disabled, .noHover):hover {
@@ -108,19 +108,19 @@
     &.disabled,
     &:disabled {
       cursor: default;
-      .hulyPopup-row__label { opacity: .5; }
+      .hanzoaiPopup-row__label { opacity: .5; }
     }
     &.noHover {
       cursor: default;
     }
   }
-  .hulyPopup-group {
+  .hanzoaiPopup-group {
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
     padding: var(--spacing-0_5);
   }
-  .hulyPopup-divider {
+  .hanzoaiPopup-divider {
     flex-shrink: 0;
     width: 100%;
     height: 1px;
@@ -168,7 +168,7 @@
     width: 100%;
     max-width: 100%;
   }
-  
+
   &.maxHeight { height: 22rem; }
   &.autoHeight {
     max-height: calc(100vh - 2rem);
@@ -184,7 +184,7 @@
   .header {
     flex-shrink: 0;
     padding: .5rem;
-    
+
     &:not(.no-border) {
       margin-bottom: .5rem;
       border-bottom: 1px solid var(--theme-popup-divider);
@@ -196,12 +196,12 @@
       width: .75rem;
       height: .75rem;
       border-radius: 50%;
-  
+
       .icon {
         width: .625rem;
         height: .625rem;
       }
-  
+
       &.show {
         color: var(--theme-content-color);
         background-color: var(--theme-button-default);
@@ -243,7 +243,7 @@
 
     &:not(.default-cursor) { cursor: pointer; }
     &.high { height: 3rem; }
-    
+
     .icon, .color, .tag {
       flex-shrink: 0;
       margin-right: .5rem;
@@ -320,7 +320,7 @@
       text-align: left;
       color: var(--theme-caption-color);
       background-color: var(--theme-popup-color);
-      
+
       &:not(.default-cursor) { cursor: pointer; }
       .icon {
         width: .25rem;
@@ -363,7 +363,7 @@
   min-height: 0;
   min-width: 0;
   user-select: none;
-  
+
   &:not(.embedded) {
     max-width: 30rem;
     background: var(--theme-popup-color);
@@ -414,7 +414,7 @@
     min-width: 0;
     color: var(--theme-caption-color);
     cursor: pointer;
-    
+
     &:not(.separator) {
       min-height: 2.25rem;
       border-radius: .25rem;
@@ -595,7 +595,7 @@
       flex-direction: column;
       margin: 0 .5rem;
       text-align: left;
-  
+
       .ap-caption {
         margin: .5rem 0 0 .75rem;
         font-size: .75rem;
@@ -657,9 +657,9 @@
   background: var(--theme-popup-color);
   border-radius: .5rem;
   box-shadow: var(--theme-popup-shadow);
-  
+
   &:not(.min-w-168) { min-width: 22rem; }
-  
+
   .header {
     display: flex;
     align-items: center;
